--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-mdx": "^3.0.0",
     "gatsby-plugin-sharp": "^4.0.1",
+    "gatsby-plugin-vanilla-extract": "^1.0.5",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "react": "^17.0.1",
